@@ -43,11 +43,15 @@ public class SGuiChoose {
         if ((choices == null) || choices.isEmpty()) {
             return null;
         }
-        final List<T> choice = SGuiChoose.getChoices(message, 0, 1, choices, selected, display);
+        final List<T> choice = SGuiChoose.getChoices(message, 0, 1, choices, selected == null ? null : List.of(selected), display);
         return choice.isEmpty() ? null : choice.get(0);
     }
 
     public static <T> T one(final String message, final Collection<T> choices) {
+        return one(message, choices, null, null);
+    }
+
+    public static <T> T one(final String message, final Collection<T> choices, T selected, Function<T, String> display) {
         if (choices == null || choices.isEmpty()) {
             return null;
         }
@@ -55,7 +59,7 @@ public class SGuiChoose {
             return Iterables.getFirst(choices, null);
         }
 
-        final List<T> choice = SGuiChoose.getChoices(message, 1, 1, choices);
+        final List<T> choice = SGuiChoose.getChoices(message, 1, 1, choices, selected == null ? null : List.of(selected), display);
         assert choice.size() == 1;
         return choice.get(0);
     }
@@ -147,12 +151,12 @@ public class SGuiChoose {
         return getChoices(message, min, max, Arrays.asList(choices), null, null);
     }
     public static <T> List<T> getChoices(final String message, final int min, final int max, final T[] choices, final T selected, final Function<T, String> display) {
-        return getChoices(message, min, max, Arrays.asList(choices), selected, display);
+        return getChoices(message, min, max, Arrays.asList(choices), selected == null ? null : List.of(selected), display);
     }
     public static <T> List<T> getChoices(final String message, final int min, final int max, final Collection<T> choices) {
         return getChoices(message, min, max, choices, null, null);
     }
-    public static <T> List<T> getChoices(final String message, final int min, final int max, final Collection<T> choices, final T selected, final Function<T, String> display) {
+    public static <T> List<T> getChoices(final String message, final int min, final int max, final Collection<T> choices, final Collection<T> selected, final Function<T, String> display) {
         return GuiBase.getInterface().getChoices(message, min, max, choices, selected, display);
     }
 
